# SortingVisualization

./: Cargo.toml  README.md
src/: main.rs  options.rs  sortable_data.rs
src/sorting_algorithms/: bubble_sort.rs  cocktail_shaker_sort.rs  comb_sort.rs  cycle_sort.rs  gnome_sort.rs  heapsort.rs  insertion_sort.rs  insertion_sort_fast.rs  introsort.rs  merge_sort.rs  merge_sort_async.rs  merge_sort_recursive.rs  merge_sort_recursive_async.rs  mod.rs  odd_even_sort.rs  quicksort_hoare.rs  quicksort_hoare_async.rs  quicksort_lomuto.rs  quicksort_lomuto_async.rs  selection_sort.rs  shellsort.rs
src/visualizations/: console.rs  image.rs  mod.rs
src/visualizations/image/: color_palettes.rs  mod.rs
src/visualizations/image/colormaps/: autumn.rs  bone.rs  copper.rs  hot.rs  hsv.rs  jet.rs  mod.rs  parula.rs  pink.rs  spring.rs  summer.rs  turbo.rs  winter.rs
